add GC notes